[package]
name = "rustgen-macros"
version = "0.1.0"
authors = ["g2xpf <nameko.jack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
serde_json = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full", "extra-traits"]
